<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="64dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="64dp"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        style="@style/IntroTitleStyle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ui_form_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:boxBackgroundColor="@color/transparent"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ui_textfield_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword|textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ui_form_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/transparent"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ui_textfield_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ui_form_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/transparent"
            app:endIconMode="password_toggle"
            app:hintTextAppearance="@style/TextInputHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ui_textfield_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ui_form_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_auth_confirm_password"
            app:boxBackgroundColor="@color/transparent"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ui_textfield_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ui_form_invitation_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_auth_invitation_code"
            app:boxBackgroundColor="@color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ui_textfield_invitation_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/ui_description"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineHeight="18sp"
        android:text="@string/msg_auth_invitation_code_description"
        android:textColor="@color/textColorLight" />

</LinearLayout>